istio.yaml
#
#
# VirtualService
#
# 
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product
spec:
  hosts:
  - product
  http:
  - route:
    - destination:
        host: product
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review
spec:
  hosts:
    - review
  http:
  - match:
    - headers:
        version:
          exact: v2
    route:
    - destination:
        host: review
        subset: v2
  - match:
    - headers:
        version:
          exact: all
    route:
    - destination:
        host: review
        subset: v1
      weight: 50
    - destination:
        host: review
        subset: v2
      weight: 50
  - match:
    - headers:
        version:
          exact: v2-most
    route:
    - destination:
        host: review
        subset: v1
      weight: 10
    - destination:
        host: review
        subset: v2
      weight: 90
  - route:
    - destination:
        host: review
        subset: v1
---


#
#
# DestinationRule
#
# 
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product
spec:
  host: product
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: review
spec:
  host: review
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
